@@ -2,10 +2,8 @@ package demo.article.service.impl;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
-import java.util.HashMap;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.ThreadLocalRandom;
@@ -56,16 +54,6 @@ public class ArticleChannelServiceImpl extends ArticleCommonService implements A
 	@Autowired
 	private BaseUtilCustom baseUtilCustom;
 	
-	private static List<String> hostNameList = null;
-
-	private List<String> loadHostNameList() {
-		if (hostNameList == null || hostNameList.size() != 3) {
-			hostNameList = new ArrayList<String>();
-			HashMap<String, String> hostNameMap = systemConstantService.getValsByName(List.of(SystemConstantStore.hostName1, SystemConstantStore.hostName2, SystemConstantStore.hostName3));
-			hostNameList.addAll(hostNameMap.values());
-		}
-		return hostNameList;
-	}
 	
 	private static ArticleUUIDChannelStoreBO articleUUIDChannelStore = new ArticleUUIDChannelStoreBO();
 	private static Long articleChannelRefreshMinute = 0L;
@@ -529,17 +517,15 @@ public class ArticleChannelServiceImpl extends ArticleCommonService implements A
 			return channelList;
 		}
 
-		List<String> hostNameList = loadHostNameList();
-
 		ArticleUUIDChannelStoreBO uuidStore = getArticleUUIDChannelStore();
 
 		if (StringUtils.isBlank(hostName) || uuidStore.getChannelList().size() < 1) {
 			channelList = removeChannelsForUnknow(channelList, uuidStore);
-		} else if (hostName.contains(hostNameList.get(0))) {
+		} else if (hostName.contains(systemConstantService.getValByName(SystemConstantStore.hostName1))) {
 			channelList = removeChannelsFor3310For(channelList, uuidStore);
-		} else if (hostName.contains(hostNameList.get(1))) {
+		} else if (hostName.contains(systemConstantService.getValByName(SystemConstantStore.hostName2))) {
 			channelList = removeChannelsForSDW(channelList, uuidStore);
-		} else if (hostName.contains(hostNameList.get(2))) {
+		} else if (hostName.contains(systemConstantService.getValByName(SystemConstantStore.hostName3))) {
 			channelList = removeChannelsForER(channelList, uuidStore);
 		} else {
 			channelList = removeChannelsForUnknow(channelList, uuidStore);
@@ -555,7 +541,7 @@ public class ArticleChannelServiceImpl extends ArticleCommonService implements A
 		}
 
 		GetArticleChannelsBO newChannelList = removeChannels(channelList, uuidStore,
-				Arrays.asList(new Long[] { 2L, 3L, 4L }));
+				List.of(2L, 3L, 4L));
 
 		return newChannelList;
 	}
@@ -567,7 +553,7 @@ public class ArticleChannelServiceImpl extends ArticleCommonService implements A
 		}
 
 		GetArticleChannelsBO newChannelList = removeChannels(channelList, uuidStore,
-				Arrays.asList(new Long[] { 3L, 4L }));
+				List.of(3L, 4L));
 
 		return newChannelList;
 	}
@@ -578,8 +564,7 @@ public class ArticleChannelServiceImpl extends ArticleCommonService implements A
 			return channelList;
 		}
 
-		GetArticleChannelsBO newChannelList = removeChannels(channelList, uuidStore,
-				Arrays.asList(new Long[] { -1L }));
+		GetArticleChannelsBO newChannelList = removeChannels(channelList, uuidStore, null);
 
 		return newChannelList;
 	}
@@ -594,8 +579,7 @@ public class ArticleChannelServiceImpl extends ArticleCommonService implements A
 		channelList.getFlashChannels().clear();
 		channelList.getPrivateChannels().clear();
 		
-		GetArticleChannelsBO newChannelList = removeChannels(channelList, uuidStore,
-				Arrays.asList(new Long[] { 20L }));
+		GetArticleChannelsBO newChannelList = removeAllChannels(channelList);
 
 		return newChannelList;
 	}
@@ -612,6 +596,15 @@ public class ArticleChannelServiceImpl extends ArticleCommonService implements A
 
 		tmpChannelList = removeChannels(channelList.getPrivateChannels(), uuidStore, targetChannelIds);
 		channelList.setPrivateChannels(tmpChannelList);
+
+		return channelList;
+	}
+	
+	private GetArticleChannelsBO removeAllChannels(GetArticleChannelsBO channelList) {
+		
+		channelList.setPublicChannels(new ArrayList<ArticleChannelVO>());
+		channelList.setFlashChannels(new ArrayList<ArticleChannelVO>());
+		channelList.setPrivateChannels(new ArrayList<ArticleChannelVO>());
 
 		return channelList;
 	}
